update build and dev server

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name=Description content="Farrung is a Los Angeles based design studio specializing in new media branding, communications and marketing. "/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>f a r r u n g . d e s i g n . s t u d i o</title>
 </head>
 <body>
     <div id="react-application"></div>
